--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage": "https://jaravan.github.io/nft-minter",
   "name": "nft-minter",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jaravan.github.io/nft-minter/",
   "dependencies": {
     "-": "^0.0.1",
     "@alch/alchemy-web3": "^1.0.1",
@@ -10,7 +10,6 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "gh-pages": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -44,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "gh-pages": "^5.0.0"
   }
 }
