--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@ node_modules/
 node_modules/*
 tmp/*
 .env
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
